--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a{
     background-color: rgba(255, 71, 71, 0.959);
     font-family: sans-serif;
     text-decoration: none;
-    padding: 3% 9% 3% 9%;
+    padding: 2.3% 7% 2.3% 7%;
     color: white;
     border-radius: 5px;
 }
@@ -101,13 +101,24 @@ h3{
    
 }
 .half-width-section3img img{
-    width: 80%;
+    width: 90%;
 }
-#third-heading{
+.third-heading{
     font-size:2.5em;
     font-family: 'Rubik', sans-serif; 
     margin-left: 2%;
     color: rgb(0, 0, 54);
     margin-top: 50px;
-
+    width: 40%;
 }
+.fourth-section{
+    padding-left: 10%;
+}
+.half-width-section4img img{
+    width: 90%;
+}
+.half-width-section4img{
+    width: 40%;
+    padding-top: 50px;
+}   
+    
