--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ h3{
 .last-section-image img{
     width: 60%;
     border-radius: 10px;
+    box-shadow: 0px 15px 25px gray;
 }
 html,body{
     width: 100% ;
